--- a/pages/about.html
+++ b/pages/about.html
@@ -1,93 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À Propos de AMAR | Promotion de la Mobilité et de l'Accessibilité | Association pour la mobilité, 
+    <title>À Propos de AMAR | Promotion de la Mobilité et de l'Accessibilité | Association pour la mobilité,
         l'accessibilité et la réhabilitation</title>
     <meta name="description" content="Découvrez comment AMAR, une association dédiée à la promotion de la mobilité et de 
     l'accessibilité, améliore la qualité de vie des personnes en situation de handicap. Rejoignez-nous dans notre mission et 
     contribuez à rendre le monde plus accessible pour tous.">
     <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="/styles/template.css">
+
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
 </head>
+
 <body>
+    <header>
+        <button tabindex="1" class="logo"><a href="/"><img src="/images/image.png" alt=""></a></button>
+        <button tabindex="2" class="header"><a href="/pages/project.html">Projet</a></button>
+        <button tabindex="3" class="header"><a href="/pages/about.html">A Propos</a></button>
+        <button tabindex="4" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <div id="google_translate_element" tabindex="5" role="button" aria-label="Sélectionner la langue"></div>
+        <script type="text/javascript">
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement({ pageLanguage: 'fr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+            }
+        </script>
+        <script type="text/javascript"
+            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    </header>
+    <header class="mobile">
+        <button tabindex="1" class="logo"><a href="#HOME"><img src="/images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+    </header>
+    <nav class="headercontent">
+        <button tabindex="1" class="header"><a href="/pages/project.html">Projet</a></button>
+        <button tabindex="2" class="header"><a href="/pages/about.html">A Propos</a></button>
+        <button tabindex="3" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="4" class="header">Langue</button>
+    </nav>
     <main>
-        <h1 id="amar" tabindex="0">Pourquoi créer A.M.A.R ?</h1>
+        <h1 id="amar" tabindex="6">Pourquoi créer A.M.A.R ?</h1>
         <section class="default">
-        <p tabindex="0">Shireen et Lorena, nous sommes deux cousines, qui avons pour motivation profonde d’apporter une aide à notre pays 
-            El Salvador et laisser une empreinte.</p>
-        <p tabindex="0">Nous souhaitons donner la possibilité à d’autres personnes d’adhérer à notre projet afin de le
-             faire perdurer pour les générations futures.</p>
-             <aside class="Default">
+            <p tabindex="7">Shireen et Lorena, nous sommes deux cousines, qui avons pour motivation profonde d’apporter
+                une aide à notre pays
+                El Salvador et laisser une empreinte.</p>
+            <p tabindex="8">Nous souhaitons donner la possibilité à d’autres personnes d’adhérer à notre projet afin de
+                le
+                faire perdurer pour les générations futures.</p>
+            <aside class="Default">
                 <section id="text">
-                    <h6 tabindex="0">Mais par où commencer?</h6>
-                    <h6 tabindex="0">Que Pouvons nous apportez?</h6>
+                    <h6 tabindex="9">Mais par où commencer?</h6>
+                    <h6 tabindex="10">Que Pouvons nous apportez?</h6>
                 </section>
                 <section id="img">
-                    <img src="/images/Group_1.png" alt="Deux femmes une avec un T-shirt rouge et l'autre avec un blanc et des lunettes." tabindex="0"/>
-                </section>
-                </aside>
-        </section>
-    <section class="second">
-        <section id="text">
-            <p tabindex="0">Finalement c’est l’histoire d’Adrien qui nous a amenées à notre projet.</p>
-            <p tabindex="0">Adrien est né au Salvador en 2016 avec le syndrome Arnold Chiari type 2. Il a été hospitalisé pendant 6 mois à l’hôpital Benjamin Bloom, 
-                le seul hôpital pédiatrique public au Salvador.</p>
-            <p tabindex="0">Pour ses 14 mois, toute la famille emménage en France et Adrien a bénéficié des meilleurs soins et suivi, 
-                grâce aux différentes structures du pays.</p>
-            <p tabindex="0">Dans ce quotidien et au contact avec les équipes soignantes et les autres parents, Shireen, sa maman, 
-                a vu le moyen de pouvoir aider les personnes au Salvador.</p>
-            <p tabindex="0">Un jour de discussion et de rêverie à propos de nos envies de faire le lien entre la France et El Salvador, 
-                Shireen partage avec Lorena son idée... et c’est là que le projet A.MA.R voit le jour.
-            </p>
-        </section>
-        <aside>
-            <img src="/images/Drug.jpeg" alt="Adrien, le petit garçon assis sur un fauteuil." tabindex="0"/>
-            <p tabindex="0">Adrien</p>
-        </aside>
-    </section>
-    <h1 tabindex="0">L’association et le Développement Durable</h1>
-    <section class="third">
-        <section id="title">
-            <h6 tabindex="0">Nous contribuons à une économie circulaire par la réutilisation du matériel et à la préservation de notre environnement en 
-                évitant les déchets inutiles. Répondant ainsi à certains des objectifs définis par les Nations Unies</h6>
-            <img src="/images/asset 19.jpeg" alt="Objectifs de développement durable" tabindex="0"/>
-        </section>
-        <section class="fourth">
-            <section id="container">
-                <section id="content">
-                    <img src="/images/3.jpeg" alt="Bonne santé et bien-être" tabindex="0"/>
-                    <p tabindex="0">Cible 3.8 : réutilisation du matériel médical peut contribuer à améliorer l'accès aux soins de santé de qualité.</p>
-                </section>
-                <section id="content">
-                    <img src="/images/9.jpeg" alt="Industrie, Architecture et Infrastructure" tabindex="0"/>
-                    <p tabindex="0"> Cible 9.5 : favoriser l'innovation en développant des modèles durables pour les soins de santé.</p>
-                </section>
-                <section id="content">
-                    <img src="/images/10.jpeg" alt="Inégalités réduites" tabindex="0"/>
-                    <p tabindex="0">Cible 10.2 : améliorer la qualité des soins dans les régions défavorisées. 
-                        réduction des inégalités en matière de revenus, de genre, d'âge et d'origine.</p>
-                </section>
-            </section>
-            <aside>
-                <section id="content">
-                    <img src="/images/11.jpeg" alt="Villes et communautés durables" tabindex="0"/>
-                    <p tabindex="0">Cible 11.6 : contribuer à des communautés plus durables en réduisant l'impact environnemental des déchets médicaux.</p>
-                </section>
-                <section id="content">
-                    <img src="/images/12.jpeg" alt="Consommation et Production Responsables" tabindex="0"/>
-                    <p tabindex="0">Cible 12.5 : réduire le gaspillage en prolongeant la durée de vie des équipements médicaux et en réduisant la 
-                        production de déchets médicaux.</p>
-                </section>
-                <section id="content">
-                    <img src="/images/17.jpeg" alt="Partenariats pour la réalisation des objectifs" tabindex="0"/>
-                    <p tabindex="0">Cible 17.16 : coopération entre des entités privés et publiques pour développer des initiatives de réutilisation efficaces et 
-                        durables.</p>
+                    <img src="/images/Group_1.png"
+                        alt="Deux femmes une avec un T-shirt rouge et l'autre avec un blanc et des lunettes."
+                        tabindex="11" />
                 </section>
             </aside>
         </section>
-    </section>
+        <section class="second">
+            <section id="text">
+                <p tabindex="12">Finalement c’est l’histoire d’Adrien qui nous a amenées à notre projet.</p>
+                <p tabindex="13">Adrien est né au Salvador en 2016 avec le syndrome Arnold Chiari type 2. Il a été
+                    hospitalisé pendant 6 mois à l’hôpital Benjamin Bloom,
+                    le seul hôpital pédiatrique public au Salvador.</p>
+                <p tabindex="14">Pour ses 14 mois, toute la famille emménage en France et Adrien a bénéficié des
+                    meilleurs soins et suivi,
+                    grâce aux différentes structures du pays.</p>
+                <p tabindex="15">Dans ce quotidien et au contact avec les équipes soignantes et les autres parents,
+                    Shireen, sa maman,
+                    a vu le moyen de pouvoir aider les personnes au Salvador.</p>
+                <p tabindex="16">Un jour de discussion et de rêverie à propos de nos envies de faire le lien entre la
+                    France et El Salvador,
+                    Shireen partage avec Lorena son idée... et c’est là que le projet A.MA.R voit le jour.
+                </p>
+            </section>
+            <aside>
+                <img src="/images/Drug.jpeg" alt="Adrien, le petit garçon assis sur un fauteuil." tabindex="0" />
+                <p tabindex="17">Adrien</p>
+            </aside>
+        </section>
+        <h1 tabindex="18">L’association et le Développement Durable</h1>
+        <section class="third">
+            <section id="title">
+                <h6 tabindex="19">Nous contribuons à une économie circulaire par la réutilisation du matériel et à la
+                    préservation de notre environnement en
+                    évitant les déchets inutiles. Répondant ainsi à certains des objectifs définis par les Nations Unies
+                </h6>
+                <img src="/images/asset 19.jpeg" alt="Objectifs de développement durable" tabindex="20" />
+            </section>
+            <section class="fourth">
+                <section id="container">
+                    <section id="content">
+                        <img src="/images/3.jpeg" alt="Bonne santé et bien-être" tabindex="21" />
+                        <p tabindex="22">Cible 3.8 : réutilisation du matériel médical peut contribuer à améliorer
+                            l'accès aux soins de santé de qualité.</p>
+                    </section>
+                    <section id="content">
+                        <img src="/images/9.jpeg" alt="Industrie, Architecture et Infrastructure" tabindex="23" />
+                        <p tabindex="24"> Cible 9.5 : favoriser l'innovation en développant des modèles durables pour les
+                            soins de santé.</p>
+                    </section>
+                    <section id="content">
+                        <img src="/images/10.jpeg" alt="Inégalités réduites" tabindex="25" />
+                        <p tabindex="26">Cible 10.2 : améliorer la qualité des soins dans les régions défavorisées.
+                            réduction des inégalités en matière de revenus, de genre, d'âge et d'origine.</p>
+                    </section>
+                </section>
+                <aside>
+                    <section id="content">
+                        <img src="/images/11.jpeg" alt="Villes et communautés durables" tabindex="27" />
+                        <p tabindex="28">Cible 11.6 : contribuer à des communautés plus durables en réduisant l'impact
+                            environnemental des déchets médicaux.</p>
+                    </section>
+                    <section id="content">
+                        <img src="/images/12.jpeg" alt="Consommation et Production Responsables" tabindex="29" />
+                        <p tabindex="30">Cible 12.5 : réduire le gaspillage en prolongeant la durée de vie des
+                            équipements médicaux et en réduisant la
+                            production de déchets médicaux.</p>
+                    </section>
+                    <section id="content">
+                        <img src="/images/17.jpeg" alt="Partenariats pour la réalisation des objectifs" tabindex="31" />
+                        <p tabindex="32">Cible 17.16 : coopération entre des entités privés et publiques pour développer
+                            des initiatives de réutilisation efficaces et
+                            durables.</p>
+                    </section>
+                </aside>
+            </section>
+        </section>
     </main>
+    <footer>
+        <h4 tabindex="33">Soutenez-nous !</h4>
+        <p tabindex="34">Vous voulez faire partie de l'aventure ?</p>
+        <button aria-label="Faire un don pour soutenir notre association" id="donButton" tabindex="35">Faire un
+            don</button>
+        <div class="logo-footer">
+            <img tabindex="36" src="../images/image.png" alt="logo amar représentant un coeur">
+            <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
+        </div>
+        <p><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+
+    </footer>
 </body>
+<script src="/js/index.js"></script>
+<script src="/js/translate.js"></script>
+
 </html>
