--- a/pages/project.html
+++ b/pages/project.html
@@ -37,19 +37,19 @@
         <button tabindex="4" class="header">Langue</button>
     </nav>
     <div class="all">
-        <section class="intro" tabindex="6">
-            <h1>Accès à la mobilité pour les enfants au Salvador</h1>
-            <p>Chaque année, au Salvador, plus de 3000 enfants ayant des besoins médicaux spécifiques bénéficient d'un
+        <section class="intro" >
+            <h1 tabindex="6">Accès à la mobilité pour les enfants au Salvador</h1>
+            <p tabindex="7">Chaque année, au Salvador, plus de 3000 enfants ayant des besoins médicaux spécifiques bénéficient d'un
                 suivi
                 médical régulier.</p>
-            <p>Cependant, de nombreuses familles n'ont pas les moyens financiers pour accéder à ce type de matériel, car
+            <p tabindex="8">Cependant, de nombreuses familles n'ont pas les moyens financiers pour accéder à ce type de matériel, car
                 le
                 système de sécurité sociale ne fonctionne pas de la même manière qu'en France.</p>
-            <p>Les différentes structures disponibles, à l'exception des hôpitaux, dépendent entièrement des dons pour
+            <p tabindex="9">Les différentes structures disponibles, à l'exception des hôpitaux, dépendent entièrement des dons pour
                 fonctionner.</p>
             <p>Pour remédier à cette situation, nous allons commencer avec deux structures pour ouvrir la voie, avec
                 l'ambition d'étendre notre initiative à l'échelle nationale.</p>
-            <div class="img">
+            <div class="img" tabindex="10">
                 <img src="/images/bloomhosp-mv045k301NuMgEP8(1).png"
                     alt="Logo Hospital nacional de ninos BENJAMIN BLOOM">
                 <img src="/images/hopac-AQE48Q0EOOcZXlj4.png" alt="Logo HOPAC">
@@ -58,56 +58,56 @@
 
         <section class="organisation">
             <article class="left">
-                <article class="article" tabindex="7">
+                <article class="article">
                     <div class="title">
-                        <p class="number">1</p>
-                        <p class="subtitle">L'INVENTAIRE</p>
+                        <p tabindex="11" class="number">1</p>
+                        <p tabindex="12" class="subtitle">L'INVENTAIRE</p>
                     </div>
-                    <p class="text">Un tri avec l’équipe médicale nous permet de vérifier l’état des appareillages
+                    <p tabindex="13" class="text">Un tri avec l’équipe médicale nous permet de vérifier l’état des appareillages
                         et
                         voir ceux qu’il faut reconditionner.</p>
                 </article>
-                <article class="article" tabindex="8">
+                <article class="article">
                     <div class="title">
-                        <p class="number">3</p>
-                        <p class="subtitle">LE VOYAGE</p>
+                        <p tabindex="17" class="number">3</p>
+                        <p tabindex="18" class="subtitle">LE VOYAGE</p>
                     </div>
-                    <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
+                    <p tabindex="19" class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
                         l’atlantique. Hâte d’arriver à destination!</p>
                 </article>
-                <article class="article" tabindex="9">
+                <article class="article">
                     <div class="title">
-                        <p class="number">5</p>
-                        <p class="subtitle">L’INSPECTION</p>
+                        <p tabindex="23" class="number">5</p>
+                        <p tabindex="24" class="subtitle">L’INSPECTION</p>
                     </div>
-                    <p class="text">Chaque appareillage est vérifié par les équipes médicales afin de donner un coup
+                    <p tabindex="25" class="text">Chaque appareillage est vérifié par les équipes médicales afin de donner un coup
                         de neuf si nécessaire, puis ils font un premier choix de patients qui recevront les
                         appareillages.</p>
                 </article>
             </article>
             <article class="right">
-                <article class="article" tabindex="10">
+                <article class="article">
                     <div class="title">
-                        <p class="number">2</p>
-                        <p class="subtitle">LA COLLECTE</p>
+                        <p tabindex="14" class="number">2</p>
+                        <p tabindex="15" class="subtitle">LA COLLECTE</p>
                     </div>
-                    <p class="text">Grâce à l’aide de nos partenaires en logistique, le transporteur vient chercher
+                    <p tabindex="16" class="text">Grâce à l’aide de nos partenaires en logistique, le transporteur vient chercher
                         les appareillages dans les centres médicaux.</p>
                 </article>
-                <article class="article" tabindex="11">
+                <article class="article">
                     <div class="title">
-                        <p class="number">4</p>
-                        <p class="subtitle">LE VOYAGE</p>
+                        <p tabindex="20" class="number">4</p>
+                        <p tabindex="21" class="subtitle">LE VOYAGE</p>
                     </div>
-                    <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
+                    <p tabindex="22" class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
                         l’atlantique. Hâte d’arriver à destination!</p>
                 </article>
-                <article class="article" tabindex="12">
+                <article class="article">
                     <div class="title">
-                        <p class="number">6</p>
-                        <p class="subtitle">LA DISTRIBUTION</p>
+                        <p tabindex="26" class="number">6</p>
+                        <p tabindex="27" class="subtitle">LA DISTRIBUTION</p>
                     </div>
-                    <p class="text">Les appareillages sont arrivés aux centres médicaux et sont remis aux patients
+                    <p tabindex="28" class="text">Les appareillages sont arrivés aux centres médicaux et sont remis aux patients
                         avec une prise en main afin de s’assurer que l’appareillage corresponde bien au besoin du
                         patient.</p>
                 </article>
@@ -115,14 +115,14 @@
         </section>
     </div>
     <footer>
-        <h4 tabindex="13">Soutenez-nous !</h4>
-        <p tabindex="14">Vous voulez faire partie de l'aventure ?</p>
-        <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="15">Faire un don</button>
+        <h4 tabindex="29">Soutenez-nous !</h4>
+        <p tabindex="30">Vous voulez faire partie de l'aventure ?</p>
+        <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="31">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="16" src="../images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="32" src="../images/image.png" alt="logo amar représentant un coeur">
             <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="33"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
 
     </footer>
 </body>
